# reinforcement

./: CMakeLists.txt  README.en.md  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  build.sh  requirements.txt  setup.py
mindspore_rl/: CMakeLists.txt  __init__.py  version.py
mindspore_rl/agent/: __init__.py  actor.py  agent.py  learner.py  trainer.py
mindspore_rl/agent/sac/: config.py  sac_agent.py
mindspore_rl/algorithm/a2c/: a2c.py  a2c_session.py  a2c_trainer.py  config.py
mindspore_rl/algorithm/a3c/: a3c.py  a3c_trainer.py
mindspore_rl/algorithm/awac/: awac_trainer.py
mindspore_rl/algorithm/c51/: __init__.py  c51.py  c51_session.py  c51_trainer.py  c51policy.py  config.py  fullyconnectednet_noisy.py  noisy_layer.py
mindspore_rl/algorithm/cql/: cql.py  cql_session.py  cql_trainer.py
mindspore_rl/algorithm/ddpg/: config.py  ddpg.py  ddpg_session.py
mindspore_rl/algorithm/dqn/: config.py  dqn_trainer.py
mindspore_rl/algorithm/dreamer/: dreamer_session.py
mindspore_rl/algorithm/gail/: gail_session.py  gail_trainer.py
mindspore_rl/algorithm/mappo/: config.py  mappo.py  mappo_session.py  mappo_trainer.py  mpe_environment.py
mindspore_rl/algorithm/ppo/: config.py  ppo_session.py  ppo_trainer.py
mindspore_rl/algorithm/qmix/: config.py  qmix_session.py
mindspore_rl/algorithm/sac/: config.py  sac.py  sac_session.py  sac_trainer.py  tanh_normal.py
mindspore_rl/algorithm/td3/: config.py  td3_summary.py  (+1 more)
mindspore_rl/core/: __init__.py  msrl.py  priority_replay_buffer.py  replay_buffer.py  session.py  uniform_replay_buffer.py
mindspore_rl/distribution/: __init__.py
mindspore_rl/environment/: __init__.py  env_process.py  environment.py  gym_environment.py  gym_multi_environment.py  mpe_environment.py  ms_environment.py  multi_environment_wrapper.py  registration.py  sc2_environment.py  space.py  tag_environment.py  tic_tac_toe_environment.py
mindspore_rl/network/: __init__.py  fully_connected_net.py  gru_net.py
mindspore_rl/policy/: epsilon_greedy_policy.py  greedy_policy.py  policy.py  random_policy.py
mindspore_rl/utils/: __init__.py  batch_read_write.py  callback.py  discounted_return.py  n_step_buffer.py  soft_update.py  tensor_array.py  tensors_queue.py  utils.py
(+173 files in other folders)
